# py-verizon-connect-api

./: .buildinfo  .gitignore  LICENSE  README.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  types.html
.doctrees/: api.doctree  environment.pickle  index.doctree  types.doctree
.github/workflows/: documentation.yml
_sources/: index.rst.txt  types.rst.txt
docs/: api.rst  conf.py  index.rst
src/verizon_connect_api/: VerizonConnectAPI.py  __init__.py  api_types.py
tests/: test_VerizonConnectAPI.py
